--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="header__conteiner">
         <div class="logo">
           <a href="/" class="main-header-logo">
-            <img src="/image/Logo small.png"  alt="Logo">
+            <img src="./image/Logo small.png"  alt="Logo">
           </a> 
         </div><!-- /.logo -->
         <nav class="navigation">
@@ -94,13 +94,13 @@
     <section class="slider__conteiner">
       <div class="slider">
           <div class="picture__conteiner">
-            <img src="/image/Styles/img1.png" alt="picture-1">
+            <img src="./image/Styles/img1.png" alt="picture-1">
           </div>
           <div class="picture__conteiner">
-              <img src="/image/Styles/img2.png" alt="picture-2">
+              <img src="./image/Styles/img2.png" alt="picture-2">
           </div>                
           <div class="picture__conteiner">
-              <img src="/image/Styles/img3.png" alt="picture-3">
+              <img src="./image/Styles/img3.png" alt="picture-3">
           </div>                
       </div>  
     </section> <!-- /.slider__conteiner -->  
@@ -140,7 +140,7 @@
       <div class="main-footer-conteiner">
         <div class="footer__logo">
           <a href="/" class="main-footer-logo">
-            <img src="/image/Styles/Logo_big.png"  alt="Logo">
+            <img src="./image/Styles/Logo_big.png"  alt="Logo">
           </a> 
           <div class="bacground__block"></div>
         </div><!-- /.logo -->
