--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
 
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="/js/slider.js"></script>
-    <script src="/js/slick.min.js"></script>
+    <script src="./js/slider.js"></script>
+    <script src="./js/slick.min.js"></script>
 
     <!-- <script src="slick.js"></script> -->
     <!-- <script src="./js/owl.carousel.min.js"></script>
