--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   </header>
   <main>
     <section class="slider__conteiner">
-      <div class="slider">
+      <div class="slider ">
           <div class="picture__conteiner">
             <img src="./image/Styles/img1.png" alt="picture-1">
           </div>
@@ -175,9 +175,10 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="./js/slider.js"></script>
     <script src="./js/slick.min.js"></script>
+    <!-- <script src="./js/owl.carousel.min.js"></script> -->
 
     <!-- <script src="slick.js"></script> -->
-    <!-- <script src="./js/owl.carousel.min.js"></script>
+<!--     
     <script src="slick.min.js"></script>
     <script src="/js/slider.js"></script>
     <script src="./js/jquery.maskedinput.min.js"></script>
