--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/all.css">
-    <!-- <link rel="stylesheet" href="./css/animation.css"> -->
     <title>John Deere</title>
 </head>
 <body>
@@ -13,7 +12,7 @@
       <div class="header__conteiner">
         <div class="logo">
           <a href="/" class="main-header-logo">
-            <img src="./image/Logo small.png"  alt="Logo">
+            <img src="./image/Logo_small.png"  alt="Logo">
           </a> 
         </div><!-- /.logo -->
         <nav class="navigation">
@@ -21,7 +20,7 @@
             <li><a href="#">About us</a></li>
             <li><a href="#">Our team</a></li>
             <li><a href="#">Contacts</a></li>
-            <li><a class="social-button" href="https://twitter.com/" alt="twitter"><span class="visually-hidden">twitter</span><svg width="32px" height="32px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <li><a class="social-button" href="https://twitter.com/" target="_blank"><span class="visually-hidden">twitter</span><svg width="32px" height="32px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <!-- Generator: sketchtool 61 (101010) - https://sketch.com -->
                 <title>AF9A2F70-07FE-4925-AAB8-02F252C1418F</title>
                 <desc>Created with sketchtool.</desc>
@@ -33,11 +32,11 @@
                     </g>
                 </g>
             </svg></a></li>
-            <li><a class="social-button" href="https://www.facebook.com/" alt="facebook"><span class="visually-hidden">facebook</span><svg width="32px" height="32px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <li><a class="social-button" href="https://www.facebook.com/" target="_blank"><span class="visually-hidden">facebook</span><svg width="32px" height="32px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               <!-- Generator: sketchtool 61 (101010) - https://sketch.com -->
               <title>226BC1CB-54CE-4CDD-8883-BA7DBADF6F9B</title>
               <desc>Created with sketchtool.</desc>
-              <g id="Page-1" stroke="none" stroke-width="1">
+              <g id="Page-2" stroke="none" stroke-width="1">
                   <g id="Home" transform="translate(-1413.000000, -29.000000)" fill="#484848" >
                       <g id="facebook" transform="translate(1413.000000, 29.000000)">
                           <path d="M16,0 C24.8352051,0 32,7.15082848 32,15.9688109 C32,23.2577972 27.1042481,29.4071638 20.4165039,31.3206628 L20.4165039,31.3206628 L20.4165039,19.502924 L23.8666992,19.502924 L24.3837891,15.5046296 L20.4165039,15.5046296 L20.4165039,12.9580897 C20.4165039,11.8033626 20.737793,11.0163256 22.3969726,11.0163256 L22.3969726,11.0163256 L24.5,11.0163256 L24.5,7.45004875 C24.1340332,7.40155945 22.8786621,7.29288496 21.4182129,7.29288496 C18.3684082,7.29288496 16.28125,9.15009747 16.28125,12.5623782 L16.28125,12.5623782 L16.28125,15.5046296 L12.84375,15.5046296 L12.84375,19.502924 L16.28125,19.502924 L16.28125,31.9339668 C16.1875,31.9356725 16.0939941,31.9376218 16,31.9376218 C7.16479494,31.9376218 0,24.7867934 0,15.9688109 C0,7.15082848 7.16479494,0 16,0 Z" id="Combined-Shape"></path>
@@ -52,21 +51,21 @@
             <span class="spinner-line diagonal part-2"></span>
           </div><!-- /.spinner -->
         </nav><!-- /.navigation -->
-      </div> 
-<section class="burger__menu--bg"></section>
-<!-- /.burger__menu--bg --> 
-<section class="burger__menu animated fadeInRight">
+      </div>
+      <section class="burger__menu--bg"></section>
+      <!-- /.burger__menu--bg --> 
+<section class="burger__menu">
   <h4 class="visually-hiddeh">Боковое меню</h4>
     <nav class="site-navigation">
       <ul class="navigation__list">
         <li class="burger__buttons"><a href="#">About us</a></li>
         <li class="burger__buttons"><a href="#">Our team</a></li>
         <li class="burger__buttons"><a href="#">Contacts</a></li>
-        <li class="burger__buttons first"><a class="social-button" href="https://twitter.com/" alt="twitter"><span class="visually-hidden">twitter</span><svg width="32px" height="32px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <li class="burger__buttons first"><a class="social-button" href="https://twitter.com/" target="_blank"><span class="visually-hidden">twitter</span><svg width="32px" height="32px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <!-- Generator: sketchtool 61 (101010) - https://sketch.com -->
             <title>AF9A2F70-07FE-4925-AAB8-02F252C1418F</title>
             <desc>Created with sketchtool.</desc>
-            <g id="Page-1" stroke="none" stroke-width="1">
+            <g id="Page-3" stroke="none" stroke-width="1">
                 <g id="Home" transform="translate(-1357.000000, -29.000000)" fill="#484848" >
                     <g id="twitter" transform="translate(1357.000000, 29.000000)">
                         <path d="M16,0 C7.16479494,0 0,7.16479494 0,16 C0,24.8352051 7.16479494,32 16,32 C24.8352051,32 32,24.8352051 32,16 C32,7.16479494 24.8352051,0 16,0 Z M23.3054199,12.4750976 C23.3125,12.6325684 23.315918,12.7907715 23.315918,12.949707 C23.315918,17.8024902 19.6220703,23.3984375 12.8669434,23.3986816 L12.8671875,23.3986816 L12.8669434,23.3986816 C10.7929688,23.3986816 8.86303712,22.7907715 7.237793,21.7490234 C7.5251465,21.782959 7.81762694,21.7998047 8.1137695,21.7998047 C9.83447263,21.7998047 11.4179688,21.2128906 12.6750488,20.2277832 C11.0673828,20.1979981 9.71191406,19.1362305 9.24414062,17.6770019 C9.46801756,17.7199707 9.69824219,17.7434082 9.93432619,17.7434082 C10.2695312,17.7434082 10.5942383,17.6982422 10.902832,17.6140137 C9.22241212,17.2775879 7.956543,15.7924805 7.956543,14.0141601 C7.956543,13.9975586 7.956543,13.982666 7.95703125,13.9672851 C8.45190431,14.2424316 9.01782225,14.407959 9.62036131,14.4265137 C8.63427737,13.7685547 7.986084,12.6437988 7.986084,11.3696289 C7.986084,10.6967774 8.16796875,10.0664062 8.48339844,9.52368163 C10.2944336,11.7458496 13.0009766,13.2072754 16.0532226,13.3608399 C15.9902344,13.0917969 15.9577637,12.8115234 15.9577637,12.5234375 C15.9577637,10.4960938 17.6025391,8.85131837 19.6306152,8.85131837 C20.6870117,8.85131837 21.6411132,9.29785156 22.3112793,10.0117188 C23.1479492,9.84667969 23.9335938,9.54101562 24.6433106,9.12036131 C24.3686524,9.97753906 23.7866211,10.6967774 23.0283203,11.1516113 C23.7712402,11.0627441 24.4792481,10.8657226 25.137207,10.5732422 C24.6457519,11.3098144 24.0224609,11.9567871 23.3054199,12.4750976 Z" id="Shape"></path>
@@ -74,11 +73,11 @@
                 </g>
             </g>
         </svg></a></li>
-        <li class="burger__buttons"><a class="social-button" href="https://www.facebook.com/" alt="facebook"><span class="visually-hidden">facebook</span><svg width="32px" height="32px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <li class="burger__buttons"><a class="social-button" href="https://www.facebook.com/" target="_blank"><span class="visually-hidden">facebook</span><svg width="32px" height="32px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
           <!-- Generator: sketchtool 61 (101010) - https://sketch.com -->
           <title>226BC1CB-54CE-4CDD-8883-BA7DBADF6F9B</title>
           <desc>Created with sketchtool.</desc>
-          <g id="Page-1" stroke="none" stroke-width="1">
+          <g id="Page-4" stroke="none" stroke-width="1">
               <g id="Home" transform="translate(-1413.000000, -29.000000)" fill="#484848" >
                   <g id="facebook" transform="translate(1413.000000, 29.000000)">
                       <path d="M16,0 C24.8352051,0 32,7.15082848 32,15.9688109 C32,23.2577972 27.1042481,29.4071638 20.4165039,31.3206628 L20.4165039,31.3206628 L20.4165039,19.502924 L23.8666992,19.502924 L24.3837891,15.5046296 L20.4165039,15.5046296 L20.4165039,12.9580897 C20.4165039,11.8033626 20.737793,11.0163256 22.3969726,11.0163256 L22.3969726,11.0163256 L24.5,11.0163256 L24.5,7.45004875 C24.1340332,7.40155945 22.8786621,7.29288496 21.4182129,7.29288496 C18.3684082,7.29288496 16.28125,9.15009747 16.28125,12.5623782 L16.28125,12.5623782 L16.28125,15.5046296 L12.84375,15.5046296 L12.84375,19.502924 L16.28125,19.502924 L16.28125,31.9339668 C16.1875,31.9356725 16.0939941,31.9376218 16,31.9376218 C7.16479494,31.9376218 0,24.7867934 0,15.9688109 C0,7.15082848 7.16479494,0 16,0 Z" id="Combined-Shape"></path>
@@ -138,51 +137,51 @@
   </main>
   <footer class="main-footer">
       <div class="main-footer-conteiner">
-        <div class="footer__logo">
-          <a href="/" class="main-footer-logo">
-            <img src="./image/Styles/Logo_big.png"  alt="Logo">
-          </a> 
-          <div class="bacground__block"></div>
-        </div><!-- /.logo -->
-        <nav class="footer__navigation">
-          <ul class="nav__list">
-            <li class="nav__item"><a href="#">About us</a></li>
-            <li class="nav__item"><a href="#">Our team</a></li>
-            <li class="nav__item"><a href="#">Contacts</a></li>
-            <li class="nav__item"><a href="#">Item 1</a></li>
-            <li class="nav__item"><a href="#">Item 2</a></li>
-            <li class="nav__item"><a href="#">Item 3</a></li>
-            <li class="nav__item"><a href="#">Item 4</a></li>
-            <li class="nav__item"><a href="#">Item 5</a></li>
-            <li class="nav__item"><a href="#">Item 6</a></li>
-          </ul>
-        </nav><!-- /.footer__navigation -->
-        <form class="form" action="https://echo.htmlacademy.ru" method="post">
-          <div class="form__conteiner">
+        <div class="footer-conteiner">
+          <div class="footer__logo">
+            <a href="/" class="main-footer-logo">
+              <img src="./image/Styles/Logo_big.png"  alt="Logo">
+            </a> 
+            <div class="bacground__block"></div>
+          </div><!-- /.footer__logo -->
+          <nav class="footer__navigation">
+            <ul class="nav__list">
+              <li class="nav__item"><a href="#">About us</a></li>
+              <li class="nav__item"><a href="#">Our team</a></li>
+              <li class="nav__item"><a href="#">Contacts</a></li>
+              <li class="nav__item"><a href="#">Item 1</a></li>
+              <li class="nav__item"><a href="#">Item 2</a></li>
+              <li class="nav__item"><a href="#">Item 3</a></li>
+              <li class="nav__item"><a href="#">Item 4</a></li>
+              <li class="nav__item"><a href="#">Item 5</a></li>
+              <li class="nav__item"><a href="#">Item 6</a></li>
+            </ul>
+          </nav><!-- /.footer__navigation -->
+        </div>
+        <form class="form">
+          <div class="input__conteiner">
+            <div class="form__conteiner">
               <input type="text" name="user_name" id="user_name" class="name form-control" placeholder="Name" required>
+              <label for="user_name">Name</label>
+          </div>
+          <div class="form__conteiner">
               <input type="email" name="user_email" id="user_email" class="email form-control" placeholder="E-mail">
+              <label for="user_email">E-mail</label>
           </div> 
+          </div>
+          
           <div class="form-group">  
               <textarea name="user_message" id="user_message" class="message form-control" placeholder="Enter your massege" cols="40" rows="5"></textarea>
               <button type="submit" class="btn btn-primary">Send</button>
           </div>
           </form><!-- /.form -->
-      </div>
+      </div><!-- /.main-footer-conteiner -->
       <div class="all_rights_reserved"><p>all rights reserved.</p></div>
   </footer>
-
-
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="./js/slider.js"></script>
     <script src="./js/slick.min.js"></script>
-    <!-- <script src="./js/owl.carousel.min.js"></script> -->
-
-    <!-- <script src="slick.js"></script> -->
-<!--     
-    <script src="slick.min.js"></script>
-    <script src="/js/slider.js"></script>
-    <script src="./js/jquery.maskedinput.min.js"></script>
-    <script src="./js/jQuery.js"></script>
-    <script src="./js/script.js"></script> -->
+    <script src="./js/script.js"></script>
+    <script src="./js/FloatLabel.js"></script>
 </body>
 </html>
